# VIGOR

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  ruff.toml  work-log.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  skill-drift.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: adr.jsonl  decisions.jsonl  overstory.jsonl  research.jsonl  testing.jsonl  vigor-agent.jsonl  vigor-core.jsonl  vigor-harness.jsonl  vigor-mcp.jsonl  vigor-runtime.jsonl
.overstory/: config.yaml  groups.json
.seeds/: config.yaml  issues.jsonl
docs/: roadmap.md  scoring-adjudication.md  vigor-framework.md
docs/adoption/: agentic-cad.md  aiecf.md  photo-editing.md  slide-decks.md  structured-documents.md
docs/adr/: 0001-adopt-vigor-loop.md  0002-use-editable-intermediate-representations.md  0003-separate-adapters-from-orchestration.md  0004-reviewer-ensemble-and-adjudicator.md  0005-trajectory-memory-and-provenance.md  0006-meta-harness-inspired-outer-loop.md  0007-sdk-agnostic-core-with-optional-agent-backends.md  0008-python-as-reference-language.md  0009-monorepo-layout.md  0010-async-core-interfaces.md  0011-ir-schema-versioning.md  0012-cost-ceiling-enforcement.md  0013-multi-tenant-subprocess-env-hardening.md  0014-generalized-agent-config.md  0015-open-plugin-spec-compatibility.md  0016-official-mcp-servers.md  0017-pure-mcp-plugin-support.md  0018-vendor-manifest-dual-publishing.md  0019-adopt-structured-documents-modality.md  0019-library-first-deployment-posture.md  0020-time-series-ir-conventional-form.md  0028-cost-ceiling-enforcement.md  0029-multi-tenant-subprocess-env-hardening.md  0030-library-first-deployment-posture.md  0031-harness-v2-architecture.md  0031-parallel-best-of-n-via-asyncio-gather.md  0032-benchmark-methodology-and-reproducibility.md  0032-single-node-orchestrator-posture.md  0033-iteration-checkpoint-resume.md  0033-promotion-gate-logic.md  0034-parallel-best-of-n-via-asyncio-gather.md  0034-runtime-observer-protocol-seam.md  0035-single-node-orchestrator-posture.md  0036-iteration-checkpoint-resume.md  0037-runtime-observer-protocol-seam.md  README.md
docs/architecture/: run-archive.md
docs/comparisons/: vigor-vs-systems.md
docs/examples/: observer.py
docs/readiness/: current-commit-state.md  implementation-readiness.md
docs/research/: 2026-mcp-reviewer-survey.md  open-plugin-spec-host-compatibility.md  vigor-research-synthesis.md
docs/schemas/: runtime-schemas.md
docs/security/: threat-model.md
docs/strategy/: deployment-and-ops.md  deployment-backlog.md  harness-backlog.md  harness-v2.md  next-modalities.md  runtime-completeness-backlog.md  runtime-completeness.md
docs/templates/: domain-adapter-spec.md  review-report-schema.md
examples/agent-demo/: README.md  agent.yaml  pyproject.toml
examples/agent-demo/src/agent_demo/: __init__.py  factories.py
examples/agent-demo/tasks/: cad.json  photo.json  video.json
examples/echo-toy-demo/: pyproject.toml
examples/echo-toy-demo/src/echo_toy_demo/: __init__.py  __main__.py
scripts/: regen_skills.py
