# Root pyproject.toml for the VIGOR UV workspace.
# VIGOR = Verifiable Iterative Generation Over Representations.

[project]
name = "vigor"
version = "0.0.0"
description = "VIGOR: Verifiable Iterative Generation Over Representations (workspace root)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "The VIGOR Authors" }]
keywords = ["agent", "generate-compile-review", "llm", "orchestration", "vigor"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = ["packages/*", "examples/*"]

[tool.uv.sources]
vigor-core = { workspace = true }
vigor-runtime = { workspace = true }
vigor-backend-strands = { workspace = true }
vigor-backend-claude-agent-sdk = { workspace = true }
vigor-adapter-photo = { workspace = true }
vigor-adapter-video-manim = { workspace = true }
vigor-adapter-cad = { workspace = true }
vigor-harness = { workspace = true }
vigor-agent = { workspace = true }
vigor-mcp = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages", "examples"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
  "error",
  "ignore::ResourceWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "ignore::DeprecationWarning:pathlib.*",
]
markers = [
  "requires_mcp: integration test that spawns a real MCP server subprocess (requires the optional 'mcp' SDK to be installed)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = [
  "packages/vigor-core/src",
  "packages/vigor-runtime/src",
  "packages/vigor-backend-strands/src",
  "packages/vigor-backend-claude-agent-sdk/src",
  "packages/vigor-adapter-photo/src",
  "packages/vigor-adapter-video-manim/src",
  "packages/vigor-adapter-cad/src",
  "packages/vigor-harness/src",
  "packages/vigor-agent/src",
  "packages/vigor-mcp/src",
]
packages = [
  "vigor_core",
  "vigor_runtime",
  "vigor_backend_strands",
  "vigor_backend_claude_agent_sdk",
  "vigor_adapter_photo",
  "vigor_adapter_video_manim",
  "vigor_adapter_cad",
  "vigor_harness",
  "vigor_agent",
  "vigor_mcp",
]

[[tool.mypy.overrides]]
module = ["strands.*", "claude_agent_sdk.*", "yaml", "yaml.*", "mcp", "mcp.*"]
ignore_missing_imports = true
