[project]
name = "vigor-example-agent-demo"
version = "0.0.1"
description = "End-to-end demo of one configurable VIGOR agent across photo + video + CAD."
requires-python = ">=3.11"
license = { file = "../../LICENSE" }

dependencies = [
  "vigor-core",
  "vigor-runtime",
  "vigor-agent",
  "vigor-adapter-photo",
  "vigor-adapter-video-manim",
  "vigor-adapter-cad",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_demo"]

[tool.uv.sources]
vigor-core = { workspace = true }
vigor-runtime = { workspace = true }
vigor-agent = { workspace = true }
vigor-adapter-photo = { workspace = true }
vigor-adapter-video-manim = { workspace = true }
vigor-adapter-cad = { workspace = true }
